test/v3/fail/this_assign01.v3
//@seman = AssignError @ 3:27
class this_assign01 {
	method m() { this = null; }
}